# rngo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  init-db.sh  justfile
.github/workflows/: ci.yml  release.yml
.rngo/effects/: create-user.yml
.rngo/systems/: db.yml  file.yml
.zed/: settings.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: agent.rs  init.rs  main.rs  sim.rs  skills.rs  ui.rs
crates/cli/src/init/: skills.rs
crates/cli/src/project/: init.rs
crates/cli/src/sim/: effect.rs  run.rs  signal.rs  system.rs
crates/rngo/: Cargo.toml  README.md
crates/rngo-core/: Cargo.toml
crates/rngo-core/src/: event.rs  simulation.rs  spec.rs
crates/rngo-core/src/effect/: clock.rs
crates/rngo-core/src/event/: log.rs
crates/rngo-core/src/schema/: array.rs  constant.rs  context.rs  number.rs  reference.rs  string.rs
crates/rngo-core/src/spec/: parse.rs
crates/rngo-core/src/util/: ext.rs
crates/rngo-core/tests/: blog.rs  schema_errors.rs
crates/rngo-core/tests/common/: mod.rs
crates/rngo/src/: lib.rs
crates/sim/: Cargo.toml  README.md
crates/sim/src/: build.rs  effect.rs  event.rs  format.rs  lib.rs  log.rs  parse.rs  schema.rs  signal.rs  simulation.rs  spec.rs  util.rs
crates/sim/src/effect/: clock.rs  trigger.rs
crates/sim/src/format/: sql.rs
crates/sim/src/log/: fs_proxy.rs  simple.rs
crates/sim/src/parse/: dialect.rs  format.rs  schema.rs
crates/sim/src/schema/: array.rs  constant.rs  context.rs  custom.rs  function.rs  number.rs  object.rs  reference.rs  select.rs  string.rs
crates/sim/src/spec/: parse.rs
crates/sim/src/util/: cel.rs  time.rs
crates/sim/tests/: blog.rs  custom_schemas.rs  format.rs  schema_errors.rs  time.rs
crates/sim/tests/common/: mod.rs
examples/cms/: .env  Cargo.toml  README.md  docker-compose.yml  justfile
examples/cms/.rngo/: spec.yml
examples/cms/.rngo/effects/: create-author.yml  create-post.yml  get-post-by-slug.yml
examples/cms/.rngo/runs/local/1/: effects.jsonl  spec.json
examples/cms/.rngo/schemas/: email.yml  lorem.paragraph.yml  lorem.sentence.yml  lorem.word.yml  name.yml
examples/cms/.rngo/systems/: api.yml  db.yml
examples/cms/migrations/: 0001_create_authors.sql  0002_create_posts.sql
examples/cms/src/: error.rs  main.rs
examples/cms/src/routes/: authors.rs  mod.rs  posts.rs
scripts/: release.sh
