[package]
name = "rngo-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rngo"
path = "src/main.rs"

[dependencies]
rngo-sim = { path = "../sim" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
