[package]
name = "rngo-cli"
version = "0.30.0"
edition = "2024"
description = "CLI for running rngo simulations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rngodev/rngo-rs"
homepage = "https://rngo.dev"
keywords = ["simulation", "testing", "data", "cli"]
categories = ["development-tools::testing", "command-line-utilities", "simulation"]

[[bin]]
name = "rngo"
path = "src/main.rs"

[dependencies]
rngo-sim = { version = "0.30.0", path = "../sim" }
chrono = "0.4"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v7"] }
ureq = { version = "3.3.0", features = ["json"] }
dialoguer = { version = "0.12.0", default-features = false }
dirs = "6.0.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tempfile = "3"
semver = "1.0.28"
