[package]
name = "rngo-sim"
version = "0.23.0"
edition = "2024"
description = "Core simulation engine for rngo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rngodev/rngo-rs"
homepage = "https://rngo.dev"
keywords = ["simulation", "testing", "data", "codegen"]
categories = ["development-tools::testing", "simulation"]

[dependencies]
fastrand = "2"
rand = { version = "0.10.1", features = ["serde"] }
rand_pcg = { version = "0.10.2", features = ["serde"] }
rand_regex = "0.19.0"
rand_seeder = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
cel = { version = "0.14.0", features = ["chrono"] }
pastey = "0.2"
indexmap = { version = "2.14.0", features = ["serde"] }
chrono = "0.4.44"
thiserror = "2.0.18"
serde_path_to_error = "0.1.20"
multi_try = "0.3.0"
